--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,11 @@
     top: 0%;
     left: 30%;
 }
+
+.img_f {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    height: 100%;
+    width: 100%;
+}
